fixing bottom spacing again

--- a/css/style.css
+++ b/css/style.css
@@ -225,7 +225,7 @@ ul {
     font-family: 'Courgette', cursive;
     font-size: 20px;
     margin-bottom: 50px;
-    margin-top: 100px;
+    margin-top: 200px;
 /*    position: absolute;
     bottom: 50px;*/
 
